--- a/signup/signup.css
+++ b/signup/signup.css
@@ -3,9 +3,15 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 98vh;
+  height: 97vh;
 }
 
+#ff {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%;
+}
 .container2 {
   display: flex;
   border-style: solid;
@@ -13,10 +19,6 @@ body {
   align-items: center;
   height: 600px;
   width: 400px;
-  left: 50%;
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
   text-align: center;
   background-color: rgba(0, 0, 0, 0.605);
   color: white;
