--- a/profiel/profiel.css
+++ b/profiel/profiel.css
@@ -79,36 +79,34 @@ h1 {
 
 table {
   display: flex;
-  margin-left: 26%;
+  margin-left: 20%;
   border-style: solid;
-  max-width: 750px;
+  border-width: 1px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 500px;
+  height: 240px;
   margin-top: 5%;
   background-color: white;
+}
+
+th {
+  display: flex;
 }
 
 td,
 th {
   display: flex;
-  padding: 10px;
+  padding: 20px;
   flex-direction: row;
+  font-size: 15px;
+  /* margin-top: 10%; */
 }
 
-th {
-  border-style: solid;
-  width: 300px;
-  background-color: rgba(92, 92, 92, 0.644);
-  border-width: 1px;
-  margin: 2px;
-}
 td {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 200px;
-  margin-top: 4px;
-}
-
-td:hover {
-  font-size: 17px;
-  text-decoration: underline;
+  margin-left: 100px;
+  margin-top: 2%;
 }
