--- a/profiel/docenten/profiel.css
+++ b/profiel/docenten/profiel.css
@@ -1,11 +1,10 @@
 * {
   margin: 0px;
   padding: 0px;
+  box-sizing: border-box;
 }
 body {
   background-color: #cad0d2;
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 h1 {
   display: flex;
@@ -82,11 +81,11 @@ h1 {
   margin: auto 0;
 }
 .table {
-  width: 55%;
+  width: 70%;
+  margin-left: 18px;
   margin-top: 15%;
-  margin-left: 5%;
-  position: absolute;
   border-collapse: collapse;
+  position: absolute;
 }
 
 .table thead {
